feat: [sp4] 快捷键切换标签
快捷键切换标签
ctrl+shift+1~9,允许用户自定义切换标签

Log: 快捷键切换标签

Change-Id: I8d45478e55b4095cfe2ee9099cdd953f99ae95e8
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/10379
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -193,6 +193,60 @@
                             "name": "Close other windows",
                             "type": "shortcut",
                             "default":  "Ctrl+Shift+Q"
+                        },
+                        {
+                            "key": "switch_label_win_1",
+                            "name": "switch label window 1",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+1"
+                        },
+                        {
+                            "key": "switch_label_win_2",
+                            "name": "switch label window 2",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+2"
+                        },
+                        {
+                            "key": "switch_label_win_3",
+                            "name": "switch label window 3",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+3"
+                        },
+                        {
+                            "key": "switch_label_win_4",
+                            "name": "switch label window 4",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+4"
+                        },
+                        {
+                            "key": "switch_label_win_5",
+                            "name": "switch label window 5",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+5"
+                        },
+                        {
+                            "key": "switch_label_win_6",
+                            "name": "switch label window 6",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+6"
+                        },
+                        {
+                            "key": "switch_label_win_7",
+                            "name": "switch label window 7",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+7"
+                        },
+                        {
+                            "key": "switch_label_win_8",
+                            "name": "switch label window 8",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+8"
+                        },
+                        {
+                            "key": "switch_label_win_9",
+                            "name": "switch label window 9",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+9"
                         }
                     ]
                 },
