feat: [sp4] 新增内置主题十个
多十个内置主题可供选择，
选中具体主题为确认使用该主题
鼠标悬浮主题上可预览当前主题

Log: 新增内置主题十个
Change-Id: I99a2f3a0725e3c2c0f4b522fd7fe6ee61f0094a0
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/10450
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -35,7 +35,13 @@
                             "hide": true,
                             "reset": false,
                             "default": "Linux"
-                        }
+                        },
+                        {
+                            "key": "expand_theme",
+                            "hide": true,
+                            "reset": false,
+                            "default": ""
+                        }  
                     ]
                 },
                 {
