chore: [all] 修改满足lintian检查
1. 去掉qt5-default
2. 添加copyright
3. 取消编译时依赖，依赖/usr/lib下的库

Log: 修改满足lintian检查
Change-Id: I88256b27abb6d64ee26daa22d072b29a7f81d6da
Reviewed-on: http://gerrit.uniontech.com/c/nanjing/deepin-terminal/+/10648
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: zhangmeng <zhangmeng@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ cmake_minimum_required(VERSION 3.9.5)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
 
 include (src/DtkSettingsToolsMacros)
+option(TERM_RPATH "Do you want to use compiled libraries" ON)
+
+if(TERM_RPATH)
+set(CMAKE_SKIP_INSTALL_RPATH YES)
+set(CMAKE_SKIP_RPATH YES)
+endif()
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
