feat: [sp4] 新增：“禁用Ctrl+S和Ctrl+Q流控制”
新增：“禁用Ctrl+S和Ctrl+Q流控制”

Log: 新增：“禁用Ctrl+S和Ctrl+Q流控制”
Change-Id: I6a35e53b6b56f5d987e54e13dc95effd5cee87a3

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -366,6 +366,18 @@
                             "default": "false"
                         }
                     ]
+                },
+                {
+                    "key": "shell",
+                    "name": "Shell",
+                    "options": [
+                        {
+                            "key": "enable_ctrl_flow",
+                            "text": "Disable Ctrl+S and Ctrl+Q flow control",
+                            "type": "checkbox",
+                            "default": "false"
+                        }
+                    ]
                 }
             ]
         }
