fix: [1030+] bug#55247 系统语言繁体中文(香港)时，dock栏点击终端新建窗口、雷神窗口选项显示英文
将ts文件与desktop文件做同步

Log: 系统语言繁体中文(香港)时，dock栏点击终端新建窗口、雷神窗口选项显示英文

Bug: https://pms.uniontech.com/zentao/bug-view-55247.html
Change-Id: I8419e6b1b5f59c98d283a40d9d5e228be075e77a

--- a/src/deepin-terminal.desktop
+++ b/src/deepin-terminal.desktop
@@ -18,6 +18,8 @@ Comment[ar]=استخدام سطر الأوامر
 Comment[ast]=Usa la llinia de comandos
 Comment[az]=Əmr sətirindən istifadə et
 Comment[bg]=Използване на команден ред
+Comment[bo]=བཀའི་ཕྲེང་སྤྱོད་པ།
+Comment[br]=Implijout ul linenn urzhiad
 Comment[ca]=Useu la línia d'ordres
 Comment[cs]=Použít příkazový řádek
 Comment[da]=Brug kommandolinjen
@@ -34,7 +36,7 @@ Comment[gl_ES]=Empregar a liña de comandos
 Comment[he]=השתמש בשורת פקודה
 Comment[hi_IN]=आदेश रेखा का उपयोग करें
 Comment[hr]=Koristi naredbeni redak
-Comment[hu]= Parancssor használata
+Comment[hu]=Parancssor használata
 Comment[hy]=Օգտագործել հրամանների տողը
 Comment[id]=Gunakan baris perintah
 Comment[it]=Usa linea di comando
@@ -50,7 +52,7 @@ Comment[pam]=Gamitan ing command line
 Comment[pl]=Użyj wiersza poleceń
 Comment[pt]=Utilize a linha de comandos
 Comment[pt_BR]=Usar a linha de comando
-Comment[ro]=Utilizare linia de comandă
+Comment[ro]=Folosește linia de comandă
 Comment[ru]=Использовать командную строку
 Comment[sk]=Použiť príkazový riadok
 Comment[sl]=Uporabi ukazno vrstico
@@ -58,7 +60,9 @@ Comment[sq]=Përdorni rresht urdhrash
 Comment[sr]=Користите командну линију
 Comment[sv]=Använd kommandoraden
 Comment[tr]=Komut satırını kullan
+Comment[ug]=بۇيرۇق ئىشلىتىش
 Comment[uk]=Використовувати командний рядок
+Comment[vi]=Sử dụng lệnh
 Comment[zh_CN]=使用命令行
 Comment[zh_HK]=使用命令列
 Comment[zh_TW]=使用命令列介面
@@ -69,6 +73,8 @@ GenericName[ast]=Terminal
 GenericName[az]=Terminal
 GenericName[bg]=Терминал
 GenericName[bn]=প্রান্তিক
+GenericName[bo]=མཐའ་སྣེ། 
+GenericName[br]=Terminal
 GenericName[ca]=Terminal
 GenericName[cs]=Terminál
 GenericName[da]=Terminal
@@ -100,7 +106,7 @@ GenericName[nl]=Terminal
 GenericName[pl]=Terminal
 GenericName[pt]=Terminal
 GenericName[pt_BR]=Terminal
-GenericName[ro]=Terminalul
+GenericName[ro]=Terminal
 GenericName[ru]=Терминал
 GenericName[sk]=Terminál
 GenericName[sl]=Terminal
@@ -118,6 +124,8 @@ GenericName[zh_TW]=終端機
 Keywords[ar]=shell;prompt;command;commandline;
 Keywords[ast]=shell;comandu;llinia;llinia de comandos;comandos;
 Keywords[bg]=shell;prompt;command;commandline;
+Keywords[bo]=shell;prompt;command;commandline;
+Keywords[br]=shell;prompt;command;commandline;
 Keywords[ca]=shell;intèrpret;intèrpret d'ordres;ordres;ordre;línia d'ordres;
 Keywords[cs]=shell;prompt;příkaz;příkazový řádek;
 Keywords[da]=skal;prompt;kommando;kommandolinje;
@@ -128,6 +136,7 @@ Keywords[es_419]=shell;prompt;command;commandline;
 Keywords[fa]=پوسته ؛ سریع ؛ فرمان ؛ خط فرمان ؛
 Keywords[fi]=shell;kehote;komento;komentorivi;pääte;terminaali;
 Keywords[fr]=shell;prompt;command;commandline;
+Keywords[gl_ES]=shell;prompt;command;commandline;
 Keywords[hu]=shell;prompt;parancs;parancssor
 Keywords[id]=shell;prompt;perintah;barisperintah;
 Keywords[it]=shell;prompt;command;commandline;terminale;cmd;script;bash;
@@ -141,18 +150,23 @@ Keywords[pt_BR]=shell;prompt;command;commandline;
 Keywords[ro]=shell;prompt;comandă;liniecomandă;
 Keywords[ru]=shell;prompt;command;commandline;
 Keywords[sk]=shell;prompt;command;commandline;
-Keywords[sq]=shell;prompt;command;commandline;
+Keywords[sq]=shell;prompt;urdhër;rreshturdhrash;
 Keywords[sr]=shell;prompt;команда;командна линија;
 Keywords[sv]=shell;prompt;command;commandline;
-Keywords[tr]=shell;prompt;command;commandline;kabuk;komut;komutsatırı;
+Keywords[tr]=kabuk;komut;komutsatırı;
+Keywords[ug]=shell;prompt;command;commandline;
 Keywords[uk]=shell;prompt;command;commandline;оболонка;запит;команда;командна;рядок;
+Keywords[vi]=shell;prompt;command;commandline;
 Keywords[zh_CN]=shell;prompt;command;commandline;
+Keywords[zh_HK]=shell;prompt;command;commandline;
 Keywords[zh_TW]=shell;prompt;command;commandline;提示;指令;指令列;
 Name[am_ET]=የ ዲፕኢን ተርሚናል
 Name[ar]=طرفية ديبين
 Name[ast]=Deepin Terminal
 Name[az]=Deepin Terminal
 Name[bg]=Deepin терминал
+Name[bo]=གཏིང་ཟབ་མཐའ་སྣེ།
+Name[br]=Terminal Deepin
 Name[ca]=Terminal del Deepin 
 Name[cs]=Terminál
 Name[da]=Deepin terminal
@@ -160,17 +174,17 @@ Name[de]=Deepin Terminal
 Name[el]=Deepin Tερματικό
 Name[en_AU]=Deepin Terminal
 Name[eo]=Deepin terminalo
-Name[es]=Terminal Deepin
+Name[es]=Terminal
 Name[es_419]=Terminal Deepin
 Name[fa]=ترمینال دیپین
 Name[fi]=Deepin pääte
 Name[fil]=Deepin Terminal
-Name[fr]=Deepin Terminal
+Name[fr]=Terminal Deepin
 Name[gl_ES]=Terminal
 Name[he]=מסוף Deepin
 Name[hi_IN]=डीपइन छोर
 Name[hr]=Deepin terminal
-Name[hu]=Deepin Terminál
+Name[hu]=Deepin® Terminál
 Name[hy]=Deepin Տերմինալ
 Name[id]=Terminal Deepin
 Name[it]=Terminale di Deepin
@@ -185,7 +199,7 @@ Name[nl]=Deepin Terminal
 Name[pam]=Deepin Terminal
 Name[pl]=Terminal Deepin
 Name[pt]=Terminal Deepin
-Name[pt_BR]=Terminal Deepin
+Name[pt_BR]=deepin Terminal
 Name[ro]=Terminalul Deepin
 Name[ru]= Терминал Deepin 
 Name[sk]=Deepin Terminál
@@ -197,9 +211,9 @@ Name[tr]=Deepin Uçbirim
 Name[ug]=Deepin تېرمىنالى
 Name[uk]=Термінал Deepin
 Name[vi]=Deepin Terminal
-Name[zh_CN]=终端
-Name[zh_HK]=終端機
-Name[zh_TW]=終端器
+Name[zh_CN]=深度终端
+Name[zh_HK]=Deepin 終端機
+Name[zh_TW]=Deepin 終端器
 
 [NewWindow Shortcut Group]
 Exec=deepin-terminal
@@ -210,6 +224,8 @@ Name=New Window
 Name[ar]=نافذة جديدة
 Name[ast]=Ventana nueva
 Name[bg]=Нов прозорец
+Name[bo]=སྒེའུ་ཁུང་གསར་བཟོ།
+Name[br]=Prenestr nevez
 Name[ca]=Finestra nova
 Name[cs]=Nové okno
 Name[da]=Nyt vindue
@@ -220,6 +236,7 @@ Name[es_419]=Nueva ventana
 Name[fa]=پنجره جدید
 Name[fi]=Uusi ikkuna
 Name[fr]=Nouvelle fenêtre
+Name[gl_ES]=Nova xanela
 Name[hr]=Novi prozor
 Name[hu]=Új ablak
 Name[id]=Jendela Baru
@@ -240,9 +257,12 @@ Name[sq]=Dritare e Re
 Name[sr]=Нови прозор
 Name[sv]=Nytt fönster
 Name[tr]=Yeni Pencere
+Name[ug]=يېڭىدىن كۆزنەك قۇرۇش
 Name[uk]=Нове вікно
+Name[vi]=Cửa sổ mới
 Name[zh_CN]=新建窗口
-Name[zh_TW]=開新視窗
+Name[zh_HK]=新建視窗
+Name[zh_TW]=新增視窗
 
 [Quake Shortcut Group]
 Exec=deepin-terminal --quake-mode
@@ -253,6 +273,8 @@ Name=Quake Terminal
 Name[ar]=طرفية كواك
 Name[ast]=Terminal Quake
 Name[bg]=Quake терминал
+Name[bo]=ཐོག་ལྷའི་མཐའ་སྣེ།
+Name[br]=Terminal Quake
 Name[ca]=Terminal Quake
 Name[cs]=Vysouvací terminál (quake)
 Name[da]=Quake-terminal
@@ -263,8 +285,9 @@ Name[es_419]=Terminal en modo Quake
 Name[fa]=ترمینال  Quake
 Name[fi]=Quake pääte
 Name[fr]=Terminal Quake
+Name[gl_ES]=Terminal Quake
 Name[hr]=Quake terminal
-Name[hu]=Quake Terminál
+Name[hu]=Lebegő Terminál
 Name[id]=Terminal Quake
 Name[it]=Terminale in primo piano
 Name[ja]=ターミナルを振動させる
@@ -283,7 +306,10 @@ Name[sq]=Terminal Quake
 Name[sr]=Спуштајући терминал
 Name[sv]=Quake Terminal
 Name[tr]=Quake Uçbirim
+Name[ug]=Quake تېرمىنالى
 Name[uk]=Термінал Quake
+Name[vi]=Quake Terminal
 Name[zh_CN]=雷神终端
+Name[zh_HK]=雷神終端
 Name[zh_TW]=雷神模式終端器
 
