--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -373,7 +373,7 @@
                     "options": [
                         {
                             "key": "enable_ctrl_flow",
-                            "text": "Disable Ctrl+S and Ctrl+Q flow control",
+                            "text": "Disable flow control using Ctrl+S, Ctrl+Q",
                             "type": "checkbox",
                             "default": "false"
                         }
