chore: [1040] 根据最新要求修改单元测试代码
根据以下最新要求修改单元测试代码:
1.去除googletest源码，control文件添加libgtest-dev和libgmock-dev
2.去除define private和#define protected定义，改成使用-fno-access-control
3.将ut项目中CMakeLists.txt文件中的make test部分注释，并去掉USE_TEST编译开关

Log: 根据最新要求修改单元测试代码
Change-Id: I7b9763247f462d48bd7be656f8724b173c86af52

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,83 +5,28 @@ configure_file(../src/environments.h.in environments.h @ONLY)
 
 # 设置添加gocv相关信息的输出
 set(CMAKE_CXX_FLAGS "-g -fprofile-arcs -ftest-coverage")
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_STANDARD 11)
-
-# Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-# Instruct CMake to run moc automatically when needed
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
+set(PROJECT_NAME_TEST ${PROJECT_NAME})
 
-configure_file(../src/environments.h.in environments.h @ONLY)
+add_compile_options(-fno-access-control)
 
-find_package(PkgConfig REQUIRED)
-find_package(Qt5Core REQUIRED)
-find_package(Qt5DBus REQUIRED)
-find_package(Qt5Gui REQUIRED)
-find_package(Qt5Widgets REQUIRED)
-find_package(Qt5LinguistTools REQUIRED)
-find_package(Qt5Network REQUIRED)
 find_package(Qt5Test REQUIRED)
+find_package(GTest REQUIRED)
+
 add_definitions(${Qt5Test_DEFINITIONS})
 
-include(FindPkgConfig)
-
-pkg_search_module(DtkWidget REQUIRED dtkwidget)
-pkg_search_module(DtkGui REQUIRED dtkgui)
-pkg_search_module(DtkCore REQUIRED dtkcore)
-pkg_search_module(GOBJECT REQUIRED gobject-2.0)
-pkg_check_modules(ATSPI2 REQUIRED atspi-2)
-pkg_check_modules(DFrameworkDBus REQUIRED dframeworkdbus)
-pkg_check_modules(LIBSECRET REQUIRED libsecret-1)
-
-include_directories(${DtkWidget_INCLUDE_DIRS})
-include_directories(${DtkGui_INCLUDE_DIRS})
-include_directories(${DtkCore_INCLUDE_DIRS})
-
-include_directories("../src/common")
-include_directories("../src/customcommand")
-include_directories("../src/encodeplugin")
-include_directories("../src/main")
-include_directories("../src/remotemanage")
-include_directories("../src/settings")
-include_directories("../src/theme")
-include_directories("../src/views")
-include_directories("../3rdparty/terminalwidget/lib")
-
+include_directories(${GTEST_INCLUDE_DIRS})
 include_directories("src/common")
-include_directories("src/3rdparty/terminalwidget/lib")
-
-set(TERMINALWIDGET_VERSION_MAJOR "0")
-set(TERMINALWIDGET_VERSION_MINOR "14")
-set(TERMINALWIDGET_VERSION_PATCH "1")
-
-add_subdirectory(termwidget5)
-
-set(LINK_LIBS
-    Qt5::Core
-    Qt5::DBus
-    Qt5::Widgets
-    Qt5::WidgetsPrivate
-    Qt5::Network
-    Qt5::Test
-
-    ${DtkWidget_LIBRARIES}
-    ${DtkCore_LIBRARIES}
-    ${DtkGUI_LIBRARIES}
-    ${DFrameworkDBus_LIBRARIES}
-    ${ATSPI2_LIBRARIES}
-    ${GOBJECT_LIBRARIES}
-    ${LIBSECRET_LIBRARIES}
-)
+include_directories("src/customcommand")
+include_directories("src/encodeplugin")
+include_directories("src/remotemanage")
+include_directories("src/views")
+include_directories("src/main")
 
 FILE(GLOB allSource
     ../src/common/*.cpp
     ../src/customcommand/*.cpp
     ../src/encodeplugin/*.cpp
-    ../src/quaketerminal/*.cpp
     ../src/remotemanage/*.cpp
     ../src/settings/*.cpp
     ../src/theme/*.cpp
@@ -100,25 +45,35 @@ FILE(GLOB allHeaders
     ../src/customcommand/*.h
     ../src/encodeplugin/*.h
     ../src/main/*.h
-    ../src/quaketerminal/*.h
     ../src/remotemanage/*.h
     ../src/settings/*.h
     ../src/theme/*.h
     ../src/views/*.h
 )
 
+FILE(GLOB allThirdPartySource
+    ../3rdparty/terminalwidget/lib/*.cpp
+)
+
+FILE(GLOB allThirdPartyHeader
+    ../3rdparty/terminalwidget/lib/*.h
+)
+
 FILE(GLOB qrcFiles
     ../src/assets/resources.qrc
 )
 
-include_directories(googletest)
-include_directories(googletest/googlemock/include)
-include_directories(googletest/googletest/include)
-
-#GTest & GMock
-add_subdirectory(googletest)
-
-set(PROJECT_NAME_TEST ${PROJECT_NAME})
+FILE(GLOB allTestHeader
+    src/common/*.h
+    src/customcommand/*.h
+    src/encodeplugin/*.h
+    src/main/*.h
+    src/remotemanage/*.h
+    src/settings/*.h
+    src/theme/*.h
+    src/views/*.h
+    src/3rdparty/terminalwidget/lib/*.h
+)
 
 FILE(GLOB allTestSource
     src/common/*.cpp
@@ -132,9 +87,26 @@ FILE(GLOB allTestSource
     src/3rdparty/terminalwidget/lib/*.cpp
 )
 
+
+set(UI ../3rdparty/terminalwidget/lib/SearchBar.ui)
+qt5_wrap_ui(UI_SRCS ${UI})
+
+set(KB_LAYOUT_DIR "${CMAKE_INSTALL_FULL_DATADIR}/${TERMINALWIDGET_LIBRARY_NAME}/kb-layouts")
+set(COLORSCHEMES_DIR "${CMAKE_INSTALL_FULL_DATADIR}/${TERMINALWIDGET_LIBRARY_NAME}/color-schemes")
+set(TRANSLATIONS_DIR "${CMAKE_INSTALL_FULL_DATADIR}/${TERMINALWIDGET_LIBRARY_NAME}/translations")
+
+add_definitions("-DHAVE_POSIX_OPENPT")
+add_definitions("-DKB_LAYOUT_DIR=\"${KB_LAYOUT_DIR}\"")
+add_definitions("-DCOLORSCHEMES_DIR=\"${COLORSCHEMES_DIR}\"")
+add_definitions("-DTRANSLATIONS_DIR=\"${TRANSLATIONS_DIR}\"")
+
 add_executable(${PROJECT_NAME_TEST}
+    ${UI_SRCS}
+    ${allThirdPartyHeader}
+    ${allThirdPartySource}
     ${allHeaders}
     ${allSource}
+    ${allTestHeader}
     ${allTestSource}
     ${qrcFiles}
     ${uiFiles}
@@ -155,44 +127,44 @@ target_include_directories(${PROJECT_NAME_TEST} PUBLIC ${Qt5Widgets_LIBRARIES}
                                                         ${GOBJECT_INCLUDE_DIRS}
                                                         ${LIBSECRET_INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME_TEST} PUBLIC ${LINK_LIBS} termwidget5 gmock gmock_main gtest gtest_main)
+target_link_libraries(${PROJECT_NAME_TEST} PUBLIC ${LINK_LIBS} terminalwidget5 Qt5::Test ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} -lpthread -lm)
 
-#------------------------------ 创建'make test'指令---------------------------------------
-add_custom_target(test
-    #执行mkdir -p 创建 coverageResult
-    COMMAND mkdir -p coverageResult
-    #设置工作目录
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-)
+##------------------------------ 创建'make test'指令---------------------------------------
+#add_custom_target(test
+#    #执行mkdir -p 创建 coverageResult
+#    COMMAND mkdir -p coverageResult
+#    #设置工作目录
+#    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+#)
 
-add_custom_command(TARGET test
-    COMMAND echo " =================== CREAT LCOV REPROT BEGIN ==================== "
+#add_custom_command(TARGET test
+#    COMMAND echo " =================== CREAT LCOV REPROT BEGIN ==================== "
 
-    #1.清理原先的gcov信息
-    COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME_TEST}.dir --zerocounters
-    COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME}.dir --zerocounters
-    COMMAND ./test/${PROJECT_NAME_TEST}
+#    #1.清理原先的gcov信息
+#    COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME_TEST}.dir --zerocounters
+#    COMMAND lcov --directory ./CMakeFiles/${PROJECT_NAME}.dir --zerocounters
+#    COMMAND ./test/${PROJECT_NAME_TEST}
 
-    #2.收集gcov信息到.info文件中
-    COMMAND lcov --directory . --capture --output-file ./coverageResult/${PROJECT_NAME}_Coverage.info
+#    #2.收集gcov信息到.info文件中
+#    COMMAND lcov --directory . --capture --output-file ./coverageResult/${PROJECT_NAME}_Coverage.info
 
-    #3.过滤一些我们不感兴趣的文件的覆盖率信息
-    COMMAND echo " =================== do filter begin ==================== "
-    COMMAND lcov --remove ./coverageResult/${PROJECT_NAME}_Coverage.info
-    '*/${PROJECT_NAME_TEST}_autogen/*' '*/${PROJECT_NAME}_autogen/*' '*/usr/include/*' '*/theme/*' '*/quaketerminal/*' '*/test/*' 'qtermwidget.h' '*/lib/SearchBar.*' '*/build-*/*' '*/googletest/*'
-    -o ./coverageResult/${PROJECT_NAME}_Coverage.info
-    COMMAND echo " =================== do filter end ==================== "
+#    #3.过滤一些我们不感兴趣的文件的覆盖率信息
+#    COMMAND echo " =================== do filter begin ==================== "
+#    COMMAND lcov --remove ./coverageResult/${PROJECT_NAME}_Coverage.info
+#    '*/${PROJECT_NAME_TEST}_autogen/*' '*/${PROJECT_NAME}_autogen/*' '*/usr/include/*' '*/theme/*' '*/quaketerminal/*' '*/test/*' 'qtermwidget.h' '*/lib/SearchBar.*' '*/build-*/*' '*/googletest/*'
+#    -o ./coverageResult/${PROJECT_NAME}_Coverage.info
+#    COMMAND echo " =================== do filter end ==================== "
 
-    #3.将.info信息生成报告到reprot文件夹中
-    COMMAND genhtml -o ./coverageResult/report ./coverageResult/${PROJECT_NAME}_Coverage.info
+#    #3.将.info信息生成报告到reprot文件夹中
+#    COMMAND genhtml -o ./coverageResult/report ./coverageResult/${PROJECT_NAME}_Coverage.info
 
-    COMMAND echo " =================== CREAT LCOV REPROT END ==================== "
+#    COMMAND echo " =================== CREAT LCOV REPROT END ==================== "
 
-    COMMAND echo " Coverage files have been output to ${CMAKE_BINARY_DIR}/coverageResult/report "
+#    COMMAND echo " Coverage files have been output to ${CMAKE_BINARY_DIR}/coverageResult/report "
 
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-)
+#    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+#)
 
-#'make test'命令依赖与我们的测试程序
-add_dependencies(test ${PROJECT_NAME_TEST})
+##'make test'命令依赖与我们的测试程序
+#add_dependencies(test ${PROJECT_NAME_TEST})
 
