chore: [1040-2] 单元测试相关代码修改
单元测试相关代码修改：
1. 移除debian/rules文件的override_dh_auto_test开关，否则单元测试代码不会被执行
2. 完善ColorScheme单元测试代码，提高覆盖率
3. test_main.cpp添加qputenv("QT_QPA_PLATFORM", "offscreen")防止运行报错

Log: 单元测试相关代码修改
Change-Id: I84edf923a003e9367bf9c11565adc86850959a8b

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories("src/encodeplugin")
 include_directories("src/remotemanage")
 include_directories("src/views")
 include_directories("src/main")
+include_directories("src/3rdparty/terminalwidget/lib/")
 
 FILE(GLOB allSource
     ../src/common/*.cpp
@@ -121,7 +122,7 @@ target_include_directories(${PROJECT_NAME_TEST} PUBLIC ${Qt5Widgets_LIBRARIES}
                                                         ${GOBJECT_INCLUDE_DIRS}
                                                         ${LIBSECRET_INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME_TEST} PUBLIC ${LINK_LIBS} terminalwidget5 Qt5::Test ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} -lpthread -lm)
+target_link_libraries(${PROJECT_NAME_TEST} PUBLIC ${LINK_LIBS} Qt5::Test ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES} -lpthread -lm)
 
 #------------------------------ 创建'make test'指令---------------------------------------
 add_custom_target(test
