feat: [1040-3] task#48313【主题】自定义主题
【主题】自定义主题

Log: 【主题】自定义主题

Bug: https://pms.uniontech.com/zentao/task-view-48313.html
Change-Id: If08bb2e3e7898942bed3ca160afc4057813827aa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,8 @@ set (DTNG_CPP_FILES
     src/views/focusframe.cpp
     src/views/iconbutton.cpp
     src/views/listview.cpp
+    src/views/customthemesettingdialog.cpp
+    src/views/themepreviewarea.cpp
 )
 
 set (DTNG_HEADER_FILES
@@ -222,6 +224,8 @@ set (DTNG_HEADER_FILES
     src/views/focusframe.h
     src/views/iconbutton.h
     src/views/listview.h
+    src/views/customthemesettingdialog.h
+    src/views/themepreviewarea.h
 )
 
 set (DTNG_QRC_FILES
