feat: [1040-3] task#48314 增加 Shell配置
高级设置菜单下，增加“Shell”；
增加选项“shell配置”，采用下拉列表展示方式；
终端应用可以获取当前系统安装的shell程序种类，将获取到的shell种类动态填充到 列表控件中；默认shell的选项：$SHELL。
支持用户可以自行切换shell 配置；配置完成后，对新建窗口分屏和标签页生效；已经创建的窗口不生效；
配置Shell后，若无法打开指定shell,需要有报错提示；提示是采取悬浮框模式，文案“ 找不到 “%1”，已启动“/bin/bash”代替。请检查Shell配置”。
如果/bin/bash也无法正常使用，需要报错提示，提示是采取悬浮框模式，文案“找不到“/bin/bash”,无法正常使用”。

Log: 增加 Shell配置

Bug: https://pms.uniontech.com/zentao/task-view-48314.html
Change-Id: Ifa0973cb655add4d0a9520cc1aeffc362639d7d9

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -372,6 +372,12 @@
                     "name": "Shell",
                     "options": [
                         {
+                            "key": "default_shell",
+                            "name": "Shell config",
+                            "type": "shellconfigcombox",
+                            "default": "$SHELL"
+                        },
+                        {
                             "key": "enable_ctrl_flow",
                             "text": "Disable flow control using Ctrl+S, Ctrl+Q",
                             "type": "checkbox",
