chore: [1040-3] 翻译文件更新
1. 自定义主题
2. shell配置

Log: 翻译文件更新
Change-Id: I0b9001a0ab7aebd65d90e24a7e16548cc1634dec

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -373,7 +373,7 @@
                     "options": [
                         {
                             "key": "default_shell",
-                            "name": "Shell config",
+                            "name": "Shell profile",
                             "type": "shellconfigcombox",
                             "default": "$SHELL"
                         },
