feat: [1040-4] 默认勾选"选中文字时自动复制到剪切板"
修改了默认配置文件，改成默认勾选"选中文字时自动复制到剪切板"

Log: 默认勾选"选中文字时自动复制到剪切板"
Change-Id: I45442dcf92dd601803ed13bf683b831ff8281459

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -321,7 +321,7 @@
                             "key": "auto_copy_selection",
                             "type": "checkbox",
                             "text": "Copy on select",
-                            "default": false
+                            "default": true
                         }
                     ]
                 },
