feat: [1040-4] 快捷键预览中，增加“super+tab”说明（用于键盘交互）
快捷键预览中，增加“super+tab”说明（用于键盘交互）

Log: 快捷键预览中，增加“super+tab”说明（用于键盘交互）
Change-Id: I51730d91023b286f147adbbd92aa6bb5f78156f7

--- a/src/assets/other/default-config.json
+++ b/src/assets/other/default-config.json
@@ -289,6 +289,12 @@
                             "name": "Remote management",
                             "type": "shortcut",
                             "default":  "Alt+Del"
+                        },
+                        {
+                            "key": "switch_focus_to_add_icon",
+                            "name": "Switch focus to \"+\" icon",
+                            "type": "shortcut",
+                            "default":  "Super+Tab"
                         }
                     ]
                 }
